--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "strava"
   ],
   "author": "Ian Perrin",
-  "contributors" : ["fewieden"],
+  "contributors" : ["fewieden, peet86, khassel, fuchsde, slametps"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ianperrin/MMM-Strava/issues"
