--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "devDependencies": {
         "grunt": "latest",
         "grunt-contrib-jshint": "latest",
-        "grunt-contrib-nodeunit": "latest"
+        "grunt-contrib-nodeunit": "latest",
+        "moment": "latest"
     }
 }
