--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "grunt": "latest",
         "grunt-contrib-jshint": "latest",
         "grunt-contrib-nodeunit": "latest",
+        "grunt-markdownlint": "^1.0.43",
         "moment": "latest"
     }
 }
