--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
         "grunt": "latest",
         "grunt-contrib-jshint": "latest",
         "grunt-contrib-nodeunit": "latest",
+        "grunt-eslint": "latest",
+        "grunt-jsonlint": "latest",
         "grunt-markdownlint": "^1.0.43",
-        "moment": "latest"
+        "grunt-stylelint": "latest",
+        "grunt-yamllint": "latest",
+        "moment": "latest",
+        "stylelint": "^9.0.0",
+        "stylelint-config-standard": "latest"
     }
 }
