--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "MMM-Strava",
-    "version": "2.0.0",
+    "version": "2.0.0-BETA",
     "description": "A MagicMirror Module for displaying your Strava data.",
     "main": "MMM-Strava.js",
     "scripts": {
-        "test": "grunt test"
+        "test": "grunt test",
+        "unit": "grunt unit",
+        "lint": "grunt lint"
     },
     "repository": {
         "type": "git",
@@ -17,27 +19,30 @@
     ],
     "author": "Ian Perrin",
     "contributors": [
-        "fewieden, peet86, khassel, fuchsde, slametps"
+        "https://github.com/ianperrin/MMM-Strava/graphs/contributors"
     ],
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/ianperrin/MMM-Strava/issues"
     },
     "homepage": "https://github.com/ianperrin/MMM-Strava/#readme",
-    "dependencies": {
-        "strava-v3": "^1.14.0"
-    },
     "devDependencies": {
         "grunt": "latest",
         "grunt-contrib-jshint": "latest",
-        "grunt-contrib-nodeunit": "latest",
         "grunt-eslint": "latest",
         "grunt-jsonlint": "latest",
         "grunt-markdownlint": "^1.0.43",
+        "grunt-mocha-test": "^0.13.3",
         "grunt-stylelint": "latest",
         "grunt-yamllint": "latest",
-        "moment": "latest",
         "stylelint": "^9.0.0",
         "stylelint-config-standard": "latest"
+    },
+    "dependencies": {
+        "moment": "latest",
+        "path": "0.12.7",
+        "querystring": "0.2.0",
+        "request": "^2.87.0",
+        "strava-v3": "1.14.0"
     }
 }
