Add mocha devDependency

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "grunt-mocha-test": "^0.13.3",
         "grunt-stylelint": "latest",
         "grunt-yamllint": "latest",
+        "mocha": "^4.1.0",
         "stylelint": "^9.0.0",
         "stylelint-config-standard": "latest"
     },
