--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: node_js
 node_js:
   - "6"
+env:
+  global:
+    - NODE_ENV=development
 before_install:
   - cd ../../ && git clone https://github.com/MichMich/MagicMirror
   - mv ianperrin/MMM-Strava MagicMirror/modules
   - cd MagicMirror && npm install express
-  - cd modules/MMM-Strava && npm install
+  - cd modules/MMM-Strava
 before_script:
   - npm install grunt-cli -g
