--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,31 @@
 {
-    "extends": "eslint:recommended",
-	"rules": {
-		"indent": ["error", 4],
-		"quotes": ["error", "double"],
-		"max-len": ["error", 250],
-		"curly": "error",
-		"camelcase": ["error", {"properties": "never"}],
-		"no-trailing-spaces": ["error", {"ignoreComments": false }],
-        "no-irregular-whitespace": ["error"],
-        "no-console": "off",
-        "no-unused-vars": ["error", { "args": "none" }]
-    },
+	"extends": ["eslint:recommended", "plugin:prettier/recommended", "plugin:jsdoc/recommended"],
+	"plugins": ["prettier", "jsdoc"],
+	"root": true,
 	"env": {
 		"browser": true,
-		"node": true,
-		"es6": true
+		"es6": true,
+		"mocha": true,
+		"node": true
+	},
+	"globals": {
+		"config": true,
+		"Log": true,
+		"MM": true,
+		"Module": true,
+		"moment": true
+	},
+	"parserOptions": {
+		"sourceType": "module",
+		"ecmaVersion": 2017,
+		"ecmaFeatures": {
+			"globalReturn": true
+		}
+	},
+	"rules": {
+		"prettier/prettier": "error",
+		"eqeqeq": "error",
+		"no-prototype-builtins": "off",
+		"no-unused-vars": "off"
 	}
 }
